Fixes to naming, alignment and styles

--- a/app/assets/stylesheets/table.css.sass
+++ b/app/assets/stylesheets/table.css.sass
@@ -3,8 +3,8 @@ table
   border-spacing: 0px
   padding: 10px 0
 
-  thead
-    th
+  thead, tfoot
+    th, td
       background: #ccc
       border-top: solid 1px #666
       border-bottom: solid 1px #666
@@ -19,3 +19,6 @@ table
 
   td
     padding: 5px 10px
+
+  .center
+    text-align: center
